<resources>

    <string name="cardview">卡片视图: %d</string>
    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer opened</string>






    <string name="app_name">DrawerAndTab</string>
    <string name="navnews">新闻</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>

    <string name="tool">工具</string>
    <string name="share">分享</string>
</resources>
