<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_news"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/navnews"/>
        <item
            android:id="@+id/nav_picture"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/picture"/>
        <item
            android:id="@+id/nav_video"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/video"/>


    </group>

    <item android:title="@string/tool">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"/>
        </menu>
    </item>

</menu>